--- a/WPF/Desktop/Views/CreateRequestWindow.xaml
+++ b/WPF/Desktop/Views/CreateRequestWindow.xaml
@@ -9,6 +9,11 @@
         WindowStartupLocation="CenterScreen"
         ResizeMode="NoResize">
     <Window.Resources>
+        <Style TargetType="Border" x:Key="BorderStyle">
+            <Setter Property="Margin" Value="5"/>
+            <Setter Property="BorderBrush" Value="Black"/>
+            <Setter Property="BorderThickness" Value="0.5"/>
+        </Style>
         <Style TargetType="Button" x:Key="ButtonStyle">
             <Setter Property="Background" Value="#88C0D0"/>
             <Setter Property="Foreground" Value="White"/>
@@ -26,8 +31,77 @@
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition/>
-                <ColumnDefinition Width="1.5*"/>
+                <ColumnDefinition Width="1.3*"/>
             </Grid.ColumnDefinitions>
+            <Border Style="{StaticResource BorderStyle}">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="3*"/>
+                        <RowDefinition Height="*"/>
+                    </Grid.RowDefinitions>
+                    <Border Grid.Row="0"
+                            Style="{StaticResource BorderStyle}"
+                            Background="#2E3440">
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition/>
+                                <ColumnDefinition Width="2*"/>
+                            </Grid.ColumnDefinitions>
+                            <TextBlock Text="Location:"
+                                       FontWeight="Bold"
+                                       FontSize="16"
+                                       Margin="5"
+                                       VerticalAlignment="Center"
+                                       Foreground="White"/>
+                            <ComboBox Grid.Column="1"
+                                      Margin="5"/>
+                        </Grid>
+                    </Border>
+                    <Border Grid.Row="1"
+                            Style="{StaticResource BorderStyle}"
+                            Background="#2E3440">
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition/>
+                                <ColumnDefinition Width="2*"/>
+                            </Grid.ColumnDefinitions>
+                            <TextBlock Text="Language:"
+                                       FontWeight="Bold"
+                                       FontSize="16"
+                                       Margin="5"
+                                       VerticalAlignment="Center"
+                                       Foreground="White"/>
+                            <ComboBox Grid.Column="1"
+                                      Margin="5"/>
+                        </Grid>
+                    </Border>
+                    <Border Grid.Row="2"
+                            Style="{StaticResource BorderStyle}"
+                            Background="#2E3440">
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition/>
+                                <ColumnDefinition Width="2*"/>
+                            </Grid.ColumnDefinitions>
+                            <TextBlock Text="Description:"
+                                       FontWeight="Bold"
+                                       FontSize="16"
+                                       Margin="5"
+                                       VerticalAlignment="Center"
+                                       Foreground="White"/>
+                            <TextBox Grid.Column="1"
+                                     Margin="5"/>
+                        </Grid>
+                    </Border>
+                    <Border Grid.Row="3"
+                            Style="{StaticResource BorderStyle}"
+                            Background="#2E3440">
+
+                    </Border>
+                </Grid>
+            </Border>
             <Border Grid.Column="1"
                     Margin="5"
                     BorderBrush="Black"
@@ -53,7 +127,7 @@
                                 <ColumnDefinition/>
                                 <ColumnDefinition/>
                             </Grid.ColumnDefinitions>
-                            <TextBlock FontSize="24"
+                            <TextBlock FontSize="16"
                                        Foreground="White"
                                        Grid.Row="0"
                                        Grid.ColumnSpan="3"
@@ -61,30 +135,31 @@
                                >Personal information</TextBlock>
                             <StackPanel Grid.Row="1"
                                         Margin="5">
-                                    <TextBlock FontSize="18"
+                                    <TextBlock FontSize="12"
                                                Foreground="White">Name</TextBlock>
-                                    <TextBox></TextBox>
+                                    <TextBox Text="{Binding TouristName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"></TextBox>
                                 </StackPanel>
 
                             <StackPanel Grid.Row="1"
                                         Grid.Column="1"
                                         Margin="5">
-                                <TextBlock FontSize="18"
+                                <TextBlock FontSize="12"
                                            Foreground="White">Surname</TextBlock>
-                                <TextBox></TextBox>
+                                <TextBox Text="{Binding TouristSurname, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"></TextBox>
                             </StackPanel>
                             <StackPanel Grid.Row="1"
                                         Grid.Column="2"
                                         Margin="5">
-                                <TextBlock FontSize="18"
+                                <TextBlock FontSize="12"
                                            Foreground="White">Age</TextBlock>
-                                <TextBox></TextBox>
+                                <TextBox Text="{Binding TouristAge, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"></TextBox>
                             </StackPanel>
 
                             
                             <Button x:Name="AddTouristButton"
                                     Style="{StaticResource ButtonStyle}"
-                                    IsEnabled="{Binding IsTouristButtonEnabled}"
+                                    IsEnabled="{Binding IsTouristButtonEnabled, UpdateSourceTrigger=PropertyChanged}"
+                                    Command="{Binding AddTouristCmd}"
                                     Grid.RowSpan="2"
                                     Grid.Column="3"
                             >Add</Button>
@@ -106,7 +181,7 @@
                                 <ColumnDefinition/>
                                 <ColumnDefinition/>
                             </Grid.ColumnDefinitions>
-                            <TextBlock FontSize="24"
+                            <TextBlock FontSize="16"
                    Foreground="White"
                    Grid.Row="0"
                    Grid.ColumnSpan="3"
@@ -114,31 +189,32 @@
            >Passenger information</TextBlock>
                             <StackPanel Grid.Row="1"
                     Margin="5">
-                                <TextBlock FontSize="18"
+                                <TextBlock FontSize="12"
                            Foreground="White">Name</TextBlock>
-                                <TextBox></TextBox>
+                                <TextBox Text="{Binding PassengerName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"></TextBox>
                             </StackPanel>
 
                             <StackPanel Grid.Row="1"
                     Grid.Column="1"
                     Margin="5">
-                                <TextBlock FontSize="18"
+                                <TextBlock FontSize="12"
                        Foreground="White">Surname</TextBlock>
-                                <TextBox></TextBox>
+                                <TextBox Text="{Binding PassengerSurname, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"></TextBox>
                             </StackPanel>
                             <StackPanel Grid.Row="1"
                     Grid.Column="2"
                     Margin="5">
-                                <TextBlock FontSize="18"
+                                <TextBlock FontSize="12"
                        Foreground="White">Age</TextBlock>
-                                <TextBox></TextBox>
+                                <TextBox Text="{Binding PassengerAge, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"></TextBox>
                             </StackPanel>
 
 
                             <Button
                 Style="{StaticResource ButtonStyle}"
-                IsEnabled="{Binding IsTouristButtonEnabled}"
-                Grid.RowSpan="2"
+                IsEnabled="{Binding IsPassengerButtonEnabled}"
+                                Command="{Binding AddPassengerCmd}"
+                                Grid.RowSpan="2"
                 Grid.Column="3"
         >Add</Button>
                         </Grid>
@@ -168,39 +244,15 @@
                                     <DataGridTemplateColumn.CellTemplate>
                                         <DataTemplate>
                                             <Button x:Name="RemovePassengerButton"
-                                            Content="Remove"
-                                            Click="RemovePassengerButton_Click"/>
+                                                    Content="Remove"
+                                                    Command="{Binding DataContext.RemovePassengerCmd, RelativeSource={RelativeSource AncestorType={x:Type DataGrid}}}"
+                                                    CommandParameter="{Binding}"/>
                                         </DataTemplate>
                                     </DataGridTemplateColumn.CellTemplate>
                                 </DataGridTemplateColumn>
                             </DataGrid.Columns>
 
                         </DataGrid>
-                        <StackPanel Grid.Column="1"
-                            VerticalAlignment="Center">
-                            <TextBlock x:Name="UseCouponsLink"
-                               FontSize="20"
-                               Margin="5, 0, 0, 0"
-                               MouseLeftButtonDown="UseCouponsLink_Click"
-                               >
-                                <TextBlock.Style>
-                                    <Style TargetType="TextBlock">
-                                        <Setter Property="Text" Value="Use coupons?"></Setter>
-                                        <Style.Triggers>
-                                            <DataTrigger Binding="{Binding IsVoucherSelected}" Value="True">
-                                                <Setter Property="Text"
-                                                Value="Remove coupon"></Setter>
-                                            </DataTrigger>
-                                        </Style.Triggers>
-                                    </Style>
-                                </TextBlock.Style>
-                            </TextBlock>
-                            <Button x:Name="ConfirmReservationButton"
-                            Style="{StaticResource ButtonStyle}"
-                            Click="ConfirmReservationButton_Click"
-                            IsEnabled="{Binding IsConfirmationButtonEnabled}"
-                            >Book</Button>
-                        </StackPanel>
                     </Grid>
                 </Grid>
             </Border>
@@ -209,6 +261,8 @@
         
         <Button Grid.Row="1"
                 Content="Create Request"
+                Width="170"
+                Height="50"
                 Style="{StaticResource ButtonStyle}"/>
     </Grid>
 </Window>
