--- a/WPF/Desktop/Views/CreateRequestWindow.xaml
+++ b/WPF/Desktop/Views/CreateRequestWindow.xaml
@@ -9,17 +9,32 @@
         WindowStartupLocation="CenterScreen"
         ResizeMode="NoResize">
     <Window.Resources>
+        <Style TargetType="DatePicker" x:Key="DatePicker">
+            <Setter Property="VerticalAlignment" Value="Center"/>
+            <Setter Property="Margin" Value="5, 0, 0, 0"/>
+            <Setter Property="BorderThickness" Value="0"/>
+            <Setter Property="FontWeight" Value="Bold"/>
+        </Style>
+        <Style TargetType="TextBlock" x:Key="HighlightedText">
+            <Setter Property="FontSize" Value="20"/>
+            <Setter Property="FontWeight" Value="Bold"/>
+            <Setter Property="Foreground" Value="White"/>
+        </Style>
+        <Style TargetType="TextBlock" x:Key="SmallText">
+            <Setter Property="FontSize" Value="16"/>
+            <Setter Property="Foreground" Value="White"/>
+        </Style>
         <Style TargetType="Border" x:Key="BorderStyle">
-            <Setter Property="Margin" Value="5"/>
+            <Setter Property="Margin" Value="10"/>
             <Setter Property="BorderBrush" Value="Black"/>
             <Setter Property="BorderThickness" Value="0.5"/>
         </Style>
         <Style TargetType="Button" x:Key="ButtonStyle">
             <Setter Property="Background" Value="#88C0D0"/>
             <Setter Property="Foreground" Value="White"/>
-            <Setter Property="Margin" Value="5"/>
+            <Setter Property="Margin" Value="10"/>
             <Setter Property="FontWeight" Value="Bold"/>
-            <Setter Property="FontSize" Value="16"/>
+            <Setter Property="FontSize" Value="18"/>
         </Style>
     </Window.Resources>
     <Grid>
@@ -31,14 +46,14 @@
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition/>
-                <ColumnDefinition Width="1.3*"/>
+                <ColumnDefinition Width="1.25*"/>
             </Grid.ColumnDefinitions>
             <Border Style="{StaticResource BorderStyle}">
                 <Grid>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="*"/>
                         <RowDefinition Height="*"/>
-                        <RowDefinition Height="3*"/>
+                        <RowDefinition Height="2.5*"/>
                         <RowDefinition Height="*"/>
                     </Grid.RowDefinitions>
                     <Border Grid.Row="0"
@@ -50,13 +65,11 @@
                                 <ColumnDefinition Width="2*"/>
                             </Grid.ColumnDefinitions>
                             <TextBlock Text="Location:"
-                                       FontWeight="Bold"
-                                       FontSize="16"
-                                       Margin="5"
+                                       Margin="10"
                                        VerticalAlignment="Center"
-                                       Foreground="White"/>
+                                       Style="{StaticResource HighlightedText}"/>
                             <ComboBox Grid.Column="1"
-                                      Margin="5"/>
+                                      Margin="10"/>
                         </Grid>
                     </Border>
                     <Border Grid.Row="1"
@@ -68,13 +81,11 @@
                                 <ColumnDefinition Width="2*"/>
                             </Grid.ColumnDefinitions>
                             <TextBlock Text="Language:"
-                                       FontWeight="Bold"
-                                       FontSize="16"
-                                       Margin="5"
-                                       VerticalAlignment="Center"
-                                       Foreground="White"/>
+                                       Style="{StaticResource HighlightedText}"
+                                       Margin="10"
+                                       VerticalAlignment="Center"/>
                             <ComboBox Grid.Column="1"
-                                      Margin="5"/>
+                                      Margin="10"/>
                         </Grid>
                     </Border>
                     <Border Grid.Row="2"
@@ -86,35 +97,58 @@
                                 <ColumnDefinition Width="2*"/>
                             </Grid.ColumnDefinitions>
                             <TextBlock Text="Description:"
-                                       FontWeight="Bold"
-                                       FontSize="16"
-                                       Margin="5"
+                                       Style="{StaticResource HighlightedText}"
+                                       Margin="10"
                                        VerticalAlignment="Center"
-                                       Foreground="White"/>
+                                       TextWrapping="Wrap"/>
                             <TextBox Grid.Column="1"
-                                     Margin="5"/>
+                                     Margin="10"
+                                     FontSize="16"/>
                         </Grid>
                     </Border>
                     <Border Grid.Row="3"
                             Style="{StaticResource BorderStyle}"
                             Background="#2E3440">
+                        <Grid Margin="5">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition/>
+                                <ColumnDefinition/>
+                            </Grid.ColumnDefinitions>
 
+                            <StackPanel Orientation="Horizontal"
+                                        Grid.Column="0"
+                                        HorizontalAlignment="Left"
+                                        VerticalAlignment="Center"
+                                        Margin="5">
+                                <TextBlock Text="Start date:"
+                                           Style="{StaticResource HighlightedText}"/>
+                                <DatePicker Style="{StaticResource DatePicker}"/>
+                            </StackPanel>
+
+                            <StackPanel Orientation="Horizontal"
+                                        Grid.Column="1"
+                                        HorizontalAlignment="Right"
+                                        VerticalAlignment="Center"
+                                        Margin="5">
+                                <TextBlock Text="End date:"
+                                           Style="{StaticResource HighlightedText}"/>
+                                <DatePicker Style="{StaticResource DatePicker}"/>
+                            </StackPanel>
+                        </Grid>
                     </Border>
                 </Grid>
             </Border>
             <Border Grid.Column="1"
-                    Margin="5"
-                    BorderBrush="Black"
-                    BorderThickness="1">
-                <Grid Margin="5">
+                    Style="{StaticResource BorderStyle}"
+                    Margin="0, 10, 10, 10">
+                <Grid>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto"/>
                         <RowDefinition Height="Auto"/>
                         <RowDefinition/>
                     </Grid.RowDefinitions>
                     <Border Grid.Row="0" 
-                            BorderBrush="Black" 
-                            BorderThickness="1" 
+                            Style="{StaticResource BorderStyle}" 
                             Background="#2E3440">
                         <Grid>
                             <Grid.RowDefinitions>
@@ -127,35 +161,34 @@
                                 <ColumnDefinition/>
                                 <ColumnDefinition/>
                             </Grid.ColumnDefinitions>
-                            <TextBlock FontSize="16"
-                                       Foreground="White"
+                            <TextBlock Style="{StaticResource HighlightedText}"
                                        Grid.Row="0"
                                        Grid.ColumnSpan="3"
-                                       Margin="5"
+                                       Margin="10"
                                >Personal information</TextBlock>
                             <StackPanel Grid.Row="1"
-                                        Margin="5">
-                                    <TextBlock FontSize="12"
-                                               Foreground="White">Name</TextBlock>
-                                    <TextBox Text="{Binding TouristName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"></TextBox>
-                                </StackPanel>
+                                        Margin="10">
+                                <TextBlock Style="{StaticResource SmallText}">Name</TextBlock>
+                                <TextBox Text="{Binding TouristName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                             FontSize="16"></TextBox>
+                            </StackPanel>
 
                             <StackPanel Grid.Row="1"
                                         Grid.Column="1"
-                                        Margin="5">
-                                <TextBlock FontSize="12"
-                                           Foreground="White">Surname</TextBlock>
-                                <TextBox Text="{Binding TouristSurname, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"></TextBox>
+                                        Margin="10">
+                                <TextBlock Style="{StaticResource SmallText}">Surame</TextBlock>
+                                <TextBox Text="{Binding TouristSurname, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                         FontSize="16"></TextBox>
                             </StackPanel>
                             <StackPanel Grid.Row="1"
                                         Grid.Column="2"
-                                        Margin="5">
-                                <TextBlock FontSize="12"
-                                           Foreground="White">Age</TextBlock>
-                                <TextBox Text="{Binding TouristAge, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"></TextBox>
+                                        Margin="10">
+                                <TextBlock Style="{StaticResource SmallText}">Age</TextBlock>
+                                <TextBox Text="{Binding TouristAge, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                         FontSize="16"></TextBox>
                             </StackPanel>
 
-                            
+
                             <Button x:Name="AddTouristButton"
                                     Style="{StaticResource ButtonStyle}"
                                     IsEnabled="{Binding IsTouristButtonEnabled, UpdateSourceTrigger=PropertyChanged}"
@@ -166,10 +199,10 @@
                         </Grid>
 
                     </Border>
-                    <Border Grid.Row="1" 
-        BorderBrush="Black" 
-        BorderThickness="1" 
-        Background="#2E3440">
+                    <Border Grid.Row="1"
+                            Style="{StaticResource BorderStyle}"
+                            Background="#2E3440"
+                            Margin="10, 0, 10, 10">
                         <Grid>
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="Auto"/>
@@ -181,72 +214,72 @@
                                 <ColumnDefinition/>
                                 <ColumnDefinition/>
                             </Grid.ColumnDefinitions>
-                            <TextBlock FontSize="16"
-                   Foreground="White"
-                   Grid.Row="0"
-                   Grid.ColumnSpan="3"
-                   Margin="5"
-           >Passenger information</TextBlock>
+                            <TextBlock Style="{StaticResource HighlightedText}"
+                                       Grid.Row="0"
+                                       Grid.ColumnSpan="3"
+                                       Margin="10">Passenger information</TextBlock>
                             <StackPanel Grid.Row="1"
-                    Margin="5">
-                                <TextBlock FontSize="12"
-                           Foreground="White">Name</TextBlock>
-                                <TextBox Text="{Binding PassengerName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"></TextBox>
+                                        Margin="10">
+                                <TextBlock Style="{StaticResource SmallText}">Name</TextBlock>
+                                <TextBox Text="{Binding PassengerName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                         FontSize="16"></TextBox>
                             </StackPanel>
 
                             <StackPanel Grid.Row="1"
-                    Grid.Column="1"
-                    Margin="5">
-                                <TextBlock FontSize="12"
-                       Foreground="White">Surname</TextBlock>
-                                <TextBox Text="{Binding PassengerSurname, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"></TextBox>
+                                        Grid.Column="1"
+                                        Margin="10">
+                                <TextBlock Style="{StaticResource SmallText}">Surame</TextBlock>
+                                <TextBox Text="{Binding PassengerSurname, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                         FontSize="16"></TextBox>
                             </StackPanel>
                             <StackPanel Grid.Row="1"
-                    Grid.Column="2"
-                    Margin="5">
-                                <TextBlock FontSize="12"
-                       Foreground="White">Age</TextBlock>
-                                <TextBox Text="{Binding PassengerAge, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"></TextBox>
+                                        Grid.Column="2"
+                                        Margin="10">
+                                <TextBlock Style="{StaticResource SmallText}">Age</TextBlock>
+                                <TextBox Text="{Binding PassengerAge, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                         FontSize="16"></TextBox>
                             </StackPanel>
 
 
-                            <Button
-                Style="{StaticResource ButtonStyle}"
-                IsEnabled="{Binding IsPassengerButtonEnabled}"
-                                Command="{Binding AddPassengerCmd}"
-                                Grid.RowSpan="2"
-                Grid.Column="3"
-        >Add</Button>
+                            <Button Style="{StaticResource ButtonStyle}"
+                                    IsEnabled="{Binding IsPassengerButtonEnabled}"
+                                    Command="{Binding AddPassengerCmd}"
+                                    Grid.RowSpan="2"
+                                    Grid.Column="3">Add</Button>
                         </Grid>
-
                     </Border>
 
-                    
+
                     <Grid Grid.Row="2">
                         <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="Auto"/>
-                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="3*"/>
+                            <ColumnDefinition Width="*"/>
                         </Grid.ColumnDefinitions>
                         <DataGrid ItemsSource="{Binding Passengers, UpdateSourceTrigger=PropertyChanged}"
                                   AutoGenerateColumns="False"
                                   CanUserAddRows="False"
                                   Grid.Column="0"
-                                  Width="500"
-                                  Height="330">
+                                  Margin="10, 0, 10, 10"
+                                  FontSize="16">
                             <DataGrid.Columns>
                                 <DataGridTextColumn Header="Name" 
-                                Binding="{Binding Name, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"></DataGridTextColumn>
+                                                    Width="*"
+                                                    Binding="{Binding Name, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"></DataGridTextColumn>
                                 <DataGridTextColumn Header="Surname"
-                                Binding="{Binding Surname, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"></DataGridTextColumn>
+                                                    Width="*"
+                                                    Binding="{Binding Surname, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"></DataGridTextColumn>
                                 <DataGridTextColumn Header="Age"
-                                Binding="{Binding Age, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"></DataGridTextColumn>
-                                <DataGridTemplateColumn>
+                                                    Width="0.5*"
+                                                    Binding="{Binding Age, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"></DataGridTextColumn>
+                                <DataGridTemplateColumn Width="*">
                                     <DataGridTemplateColumn.CellTemplate>
                                         <DataTemplate>
                                             <Button x:Name="RemovePassengerButton"
                                                     Content="Remove"
+                                                    Style="{StaticResource ButtonStyle}"
                                                     Command="{Binding DataContext.RemovePassengerCmd, RelativeSource={RelativeSource AncestorType={x:Type DataGrid}}}"
-                                                    CommandParameter="{Binding}"/>
+                                                    CommandParameter="{Binding}"
+                                                    Margin="0"/>
                                         </DataTemplate>
                                     </DataGridTemplateColumn.CellTemplate>
                                 </DataGridTemplateColumn>
@@ -256,13 +289,13 @@
                     </Grid>
                 </Grid>
             </Border>
-
         </Grid>
         
         <Button Grid.Row="1"
                 Content="Create Request"
-                Width="170"
-                Height="50"
+                Width="240"
+                Height="80"
+                Margin="10, 0, 10, 10"
                 Style="{StaticResource ButtonStyle}"/>
     </Grid>
 </Window>
