--- a/WPF/Web/Views/GuestMainWindow.xaml
+++ b/WPF/Web/Views/GuestMainWindow.xaml
@@ -11,7 +11,7 @@
         <Grid Background="LightBlue" Height="80" VerticalAlignment="Top">
             <Button Name="buttonBook" Content="Book" HorizontalAlignment="Left" VerticalAlignment="Bottom" Height="40" Width="120" Click="ButtonBookClick"/>
             <Button Name="buttonReservations" Content="Reservations" HorizontalAlignment="Left" Margin="120,0,0,0" VerticalAlignment="Bottom" Height="40" Width="120" Click="ButtonReservationsClick"/>
-            <Button Name="buttonReviews" Content="Reviews" HorizontalAlignment="Left" Margin="240,0,0,0" VerticalAlignment="Bottom" Height="40" Width="120"/>
+            <Button Name="buttonReviews" Content="Reviews" HorizontalAlignment="Left" Margin="240,0,0,0" VerticalAlignment="Bottom" Height="40" Width="120" Click="ButtonReviewsClick"/>
             <Button Name="buttonForum" Content="Forums" HorizontalAlignment="Left" Margin="360,0,0,0" VerticalAlignment="Bottom" Height="40" Width="120"/>
             <Button Name="buttonBack" Content="Back" VerticalAlignment="Bottom" Height="25" Width="75" Margin="0,0,0,55" HorizontalAlignment="Left" Click="ButtonBackClick"
                     IsEnabled="{Binding ElementName=mainFrame, Path=CanGoBack}"/>
