--- a/WPF/Web/Views/AccommodationCard.xaml
+++ b/WPF/Web/Views/AccommodationCard.xaml
@@ -37,7 +37,7 @@
             </Grid.RowDefinitions>
 
             <Border x:Name="borderHeader" Background="LightGray" Grid.ColumnSpan="2" Grid.Row="0" BorderThickness="2" Width="350" CornerRadius="10" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-                <TextBlock Grid.Row="0" FontSize="18" Margin="0 0 0 0" HorizontalAlignment="Center" VerticalAlignment="Center" Text="{Binding Accommodation.Name}"/>
+                <TextBlock Grid.Row="0" FontSize="18" Margin="0 0 0 0" HorizontalAlignment="Center" VerticalAlignment="Center" Text="{Binding Accommodation.Name}" FontWeight="DemiBold"/>
             </Border>
 
             <Border Grid.Column="0" Grid.Row="1" Height="128" Width="128" CornerRadius="10" Margin="10 0 0 0">
