--- a/WPF/Web/Views/AccommodationReservationCard.xaml
+++ b/WPF/Web/Views/AccommodationReservationCard.xaml
@@ -50,7 +50,7 @@
                     <ColumnDefinition Width="80"/>
                 </Grid.ColumnDefinitions>
 
-                <TextBlock Grid.Row="0" Grid.ColumnSpan="2" Grid.Column="0" Text="{Binding Reservation.Accommodation.Name}" FontSize="18" Margin="40 10 0 10"/>
+                <TextBlock Grid.Row="0" Grid.ColumnSpan="2" Grid.Column="0" Text="{Binding Reservation.Accommodation.Name}" FontSize="18" Margin="40 10 0 10" FontWeight="DemiBold"/>
 
                 <Label Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2">
                     <StackPanel Orientation="Horizontal">
