--- a/WPF/Desktop/Views/CreateRequestWindow.xaml
+++ b/WPF/Desktop/Views/CreateRequestWindow.xaml
@@ -18,11 +18,11 @@
         <Style TargetType="TextBlock" x:Key="HighlightedText">
             <Setter Property="FontSize" Value="20"/>
             <Setter Property="FontWeight" Value="Bold"/>
-            <Setter Property="Foreground" Value="White"/>
+            <Setter Property="Foreground" Value="Black"/>
         </Style>
         <Style TargetType="TextBlock" x:Key="SmallText">
             <Setter Property="FontSize" Value="16"/>
-            <Setter Property="Foreground" Value="White"/>
+            <Setter Property="Foreground" Value="Black"/>
         </Style>
         <Style TargetType="Border" x:Key="BorderStyle">
             <Setter Property="Margin" Value="10"/>
@@ -30,14 +30,14 @@
             <Setter Property="BorderThickness" Value="0.5"/>
         </Style>
         <Style TargetType="Button" x:Key="ButtonStyle">
-            <Setter Property="Background" Value="#88C0D0"/>
+            <Setter Property="Background" Value="#436850"/>
             <Setter Property="Foreground" Value="White"/>
             <Setter Property="Margin" Value="10"/>
             <Setter Property="FontWeight" Value="Bold"/>
             <Setter Property="FontSize" Value="18"/>
         </Style>
     </Window.Resources>
-    <Grid>
+    <Grid Background="#edeedd">
         <Grid.RowDefinitions>
             <RowDefinition/>
             <RowDefinition Height="Auto"/>
@@ -48,7 +48,8 @@
                 <ColumnDefinition/>
                 <ColumnDefinition Width="1.25*"/>
             </Grid.ColumnDefinitions>
-            <Border Style="{StaticResource BorderStyle}">
+            <Border Style="{StaticResource BorderStyle}"
+                    Background="#edeedd">
                 <Grid>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="*"/>
@@ -58,7 +59,7 @@
                     </Grid.RowDefinitions>
                     <Border Grid.Row="0"
                             Style="{StaticResource BorderStyle}"
-                            Background="#2E3440">
+                            Background="#ADBC9F">
                         <Grid>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition/>
@@ -77,7 +78,7 @@
                     </Border>
                     <Border Grid.Row="1"
                             Style="{StaticResource BorderStyle}"
-                            Background="#2E3440">
+                            Background="#ADBC9F">
                         <Grid>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition/>
@@ -96,7 +97,7 @@
                     </Border>
                     <Border Grid.Row="2"
                             Style="{StaticResource BorderStyle}"
-                            Background="#2E3440">
+                            Background="#ADBC9F">
                         <Grid>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition/>
@@ -115,7 +116,7 @@
                     </Border>
                     <Border Grid.Row="3"
                             Style="{StaticResource BorderStyle}"
-                            Background="#2E3440">
+                            Background="#ADBC9F">
                         <Grid Margin="5">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition/>
@@ -158,7 +159,7 @@
                     </Grid.RowDefinitions>
                     <Border Grid.Row="0" 
                             Style="{StaticResource BorderStyle}" 
-                            Background="#2E3440">
+                            Background="#ADBC9F">
                         <Grid>
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="Auto"/>
@@ -210,7 +211,7 @@
                     </Border>
                     <Border Grid.Row="1"
                             Style="{StaticResource BorderStyle}"
-                            Background="#2E3440"
+                            Background="#ADBC9F"
                             Margin="10, 0, 10, 10">
                         <Grid>
                             <Grid.RowDefinitions>
