--- a/WPF/Web/Views/GuestMainWindow.xaml
+++ b/WPF/Web/Views/GuestMainWindow.xaml
@@ -4,20 +4,96 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:BookingApp.WPF.Web.Views"
+        xmlns:converter="clr-namespace:BookingApp.WPF.Utils.Converters"
         mc:Ignorable="d"
         Title="GuestMainWindow" Height="650" Width="800"
         ResizeMode="NoResize">
+
+    <Window.Resources>
+        <converter:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
+
+        <Style x:Key="PrimaryButton" TargetType="Button">
+            <Setter Property="Background" Value="{StaticResource HardGreen}"/>
+            <Setter Property="BorderThickness" Value="0"/>
+            <Setter Property="Foreground" Value="White"/>
+            <Setter Property="HorizontalAlignment" Value="Left"/>
+            <Setter Property="VerticalAlignment" Value="Bottom"/>
+            <Setter Property="Height" Value="40"/>
+            <Setter Property="Width" Value="120"/>
+        </Style>
+
+        <Style x:Key="SecondaryButton" TargetType="Button">
+            <Setter Property="Background" Value="{StaticResource HardGreen}"/>
+            <Setter Property="BorderThickness" Value="0"/>
+            <Setter Property="VerticalAlignment" Value="Top"/>
+            <Setter Property="Width" Value="75"/>
+            <Setter Property="Height" Value="30"/>
+        </Style>
+
+        <Style TargetType="TextBlock">
+            <Setter Property="Foreground" Value="White"/>
+            <Setter Property="FontSize" Value="15"/>
+            <Setter Property="FontWeight" Value="Bold"/>
+            <Setter Property="HorizontalAlignment" Value="Center"/>
+        </Style>
+    </Window.Resources>
+    
     <Grid>
-        <Grid Background="LightBlue" Height="80" VerticalAlignment="Top">
-            <Button Name="buttonBook" Content="Book" HorizontalAlignment="Left" VerticalAlignment="Bottom" Height="40" Width="120" Click="ButtonBookClick"/>
-            <Button Name="buttonReservations" Content="Reservations" HorizontalAlignment="Left" Margin="120,0,0,0" VerticalAlignment="Bottom" Height="40" Width="120" Click="ButtonReservationsClick"/>
-            <Button Name="buttonReviews" Content="Reviews" HorizontalAlignment="Left" Margin="240,0,0,0" VerticalAlignment="Bottom" Height="40" Width="120" Click="ButtonReviewsClick"/>
-            <Button Name="buttonForum" Content="Forums" HorizontalAlignment="Left" Margin="360,0,0,0" VerticalAlignment="Bottom" Height="40" Width="120"/>
-            <Button Name="buttonBack" Content="Back" VerticalAlignment="Bottom" Height="25" Width="75" Margin="0,0,0,55" HorizontalAlignment="Left" Click="ButtonBackClick"
-                    IsEnabled="{Binding ElementName=mainFrame, Path=CanGoBack}"/>
-            <Button Name="buttonLogout" Content="Logout" VerticalAlignment="Bottom" HorizontalAlignment="Right" Height="25" Width="75" Margin="0,0,0,55" Click="ButtonLogoutClick"/>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        
+        <Grid Background="{StaticResource HardGreen}" Grid.Row="0" Height="80">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+
+            <Button Name="buttonBack" Grid.Row="0" HorizontalAlignment="Left" Style="{StaticResource SecondaryButton}"
+                    Click="ButtonBackClick"
+                    Visibility="{Binding ElementName=mainFrame, Path=CanGoBack, Converter={StaticResource BooleanToVisibilityConverter}}">
+                <WrapPanel>
+                    <TextBlock Text="Back"/>
+                </WrapPanel>
+            </Button>
+
+            <Button Name="buttonLogout" Grid.Row="0" HorizontalAlignment="Right" Style="{StaticResource SecondaryButton}"
+                    Click="ButtonLogoutClick">
+                <WrapPanel>
+                    <TextBlock Text="Logout"/>
+                </WrapPanel>
+            </Button>
+
+            <StackPanel Grid.Row="1" Orientation="Horizontal">
+                <Button Name="buttonBook" Style="{StaticResource PrimaryButton}" Click="ButtonBookClick">
+                    <WrapPanel>
+                        <TextBlock Text="Book"/>
+                    </WrapPanel>
+                </Button>
+
+                <Button Name="buttonReservations" Style="{StaticResource PrimaryButton}" Click="ButtonReservationsClick">
+                    <WrapPanel>
+                        <TextBlock Text="Reservations"/>
+                    </WrapPanel>
+                </Button>
+
+                <Button Name="buttonReviews" Style="{StaticResource PrimaryButton}" Click="ButtonReviewsClick">
+                    <WrapPanel>
+                        <TextBlock Text="Reviews"/>
+                    </WrapPanel>
+                </Button>
+
+                <Button Name="buttonForum" Style="{StaticResource PrimaryButton}">
+                    <WrapPanel>
+                        <TextBlock Text="Forums"/>
+                    </WrapPanel>
+                </Button>
+                    
+            </StackPanel>
         </Grid>
-        <Grid x:Name="gridPages" Margin="0,80,0,0" Height="544" VerticalAlignment="Top">
+            
+        <Grid x:Name="gridPages" Height="550" VerticalAlignment="Top" Grid.Row="1">
             <Frame x:Name="mainFrame" NavigationUIVisibility="Hidden"/>
         </Grid>
     </Grid>
